--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -r should index.spec.js",
+    "posttest": "npm run coverage",
+    "precover": "mkdir -p coverage",
+    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha -- -r should index.spec.js",
+    "coverage": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
+
+    "coverage__": "FOCICALC_COVERAGE=1 mocha -r should -R mocha-lcov-reporter index.spec.js | coveralls",
     "test:watch": "npm test -- -w -b"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "coveralls": "^2.11.15",
+    "istanbul": "^0.4.5",
     "mocha": "^3.1.0",
+    "mocha-lcov-reporter": "^1.2.0",
     "should": "^11.1.0"
   }
 }
