--- a/circle.yml
+++ b/circle.yml
@@ -4,5 +4,7 @@ machine:
   environment:
     COVERALLS_SERVICE_NAME: circleci
 test:
-  post:
+  override:
+    - npm run lint
+    - npm test
     - npm run coverage
