refactor: eslint fixes

--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
   "pre-commit": [
     "lint",
     "test"
-  ]
+  ],
+  "semistandard": {
+    "env": {
+      "node": true,
+      "mocha": true
+    }
+  }
 }
